<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.crescentflare.bitletsynchronizerexample.activity.LoginActivity">
    <LinearLayout
        android:id="@+id/activity_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_server_address"/>
            <Button
                android:id="@+id/activity_login_more_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="4dp"
                android:layout_marginRight="-4dp"
                android:text="@string/login_more_info"
                android:textColor="#0000ff"
                android:textAllCaps="false"
                android:background="@null"/>
        </LinearLayout>
        <EditText
            android:id="@+id/activity_login_server_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_server_address_hint"
            android:inputType="textUri"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/login_credentials"/>
        <EditText
            android:id="@+id/activity_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/login_username_hint"
            android:inputType="textNoSuggestions"/>
        <EditText
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"/>
    </LinearLayout>
</ScrollView>
