<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_server_details_refresher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crescentflare.bitletsynchronizerexample.activity.ServerDetailsActivity">
    <com.crescentflare.bitletsynchronizerexample.view.NotifyingScrollView
        android:id="@+id/activity_server_details_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="#ffffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_margin"
            android:background="#f8f8f8">
            <com.crescentflare.bitletsynchronizerexample.view.LoadingItem
                android:id="@+id/activity_server_details_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/item_min_height"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding"
                android:background="#ffffff"
                app:loading_label="@string/server_details_loading"/>
            <com.crescentflare.bitletsynchronizerexample.view.ErrorItem
                android:id="@+id/activity_server_details_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/item_min_height"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding"
                android:background="#ffffff"
                app:error_label="@string/server_details_error"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/activity_server_details_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:visibility="gone">
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_server_details_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/server_details_name"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/divider"/>
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_server_details_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/server_details_description"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/divider"/>
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_server_details_operating_system"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/server_details_operating_system"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/divider"/>
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_server_details_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/server_details_location"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/divider"/>
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_server_details_data_traffic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/server_details_data_traffic"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/divider"/>
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_server_details_server_load"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/server_details_server_load"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/divider"/>
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_server_details_enabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/server_details_enabled"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider"/>
        </LinearLayout>
    </com.crescentflare.bitletsynchronizerexample.view.NotifyingScrollView>
</android.support.v4.widget.SwipeRefreshLayout>