<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_overview_refresher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crescentflare.bitletsynchronizerexample.activity.OverviewActivity">
    <com.crescentflare.bitletsynchronizerexample.view.NotifyingScrollView
        android:id="@+id/activity_overview_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="#ffffff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:background="#f8f8f8">

            <!-- Usage section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/overview_usage_section"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="8dp"
                android:background="@color/divider"/>
            <com.crescentflare.bitletsynchronizerexample.view.LoadingItem
                android:id="@+id/activity_overview_usage_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/item_min_height"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding"
                android:background="#ffffff"
                app:loading_label="@string/overview_usage_loading"/>
            <com.crescentflare.bitletsynchronizerexample.view.ErrorItem
                android:id="@+id/activity_overview_usage_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/item_min_height"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding"
                android:background="#ffffff"
                app:error_label="@string/overview_usage_error"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/activity_overview_usage_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:visibility="gone">
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_overview_usage_data_traffic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/overview_usage_data_traffic"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/divider"/>
                <com.crescentflare.bitletsynchronizerexample.view.ListItem
                    android:id="@+id/activity_overview_usage_server_load"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/item_min_height"
                    android:paddingLeft="@dimen/activity_margin"
                    android:paddingRight="@dimen/activity_margin"
                    android:paddingTop="@dimen/item_vertical_padding"
                    android:paddingBottom="@dimen/item_vertical_padding"
                    app:item_label="@string/overview_usage_server_load"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider"/>

            <!-- Servers section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:layout_marginTop="12dp"
                android:text="@string/overview_servers_section"
                android:textSize="14sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="8dp"
                android:background="@color/divider"/>
            <com.crescentflare.bitletsynchronizerexample.view.LoadingItem
                android:id="@+id/activity_overview_servers_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/item_min_height"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding"
                android:background="#ffffff"
                app:loading_label="@string/overview_servers_loading"/>
            <com.crescentflare.bitletsynchronizerexample.view.ErrorItem
                android:id="@+id/activity_overview_servers_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/item_min_height"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/item_vertical_padding"
                android:paddingBottom="@dimen/item_vertical_padding"
                android:background="#ffffff"
                app:error_label="@string/overview_servers_error"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/activity_overview_servers_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#ffffff"
                android:visibility="gone">
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/divider"/>
        </LinearLayout>
    </com.crescentflare.bitletsynchronizerexample.view.NotifyingScrollView>
</android.support.v4.widget.SwipeRefreshLayout>